@@ -82,6 +82,10 @@ function loadVehicleWagon(action)
     end
   end
   
+  -- Put an icon on the wagon showing contents
+  renderIcon(loaded_wagon, vehicle.name)
+  saveData.icon = true
+  
   global.wagon_data[unit_number] = saveData
   
   -- Destroy vehicle
